Add jcenter config

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,14 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+PROJECT_NAME=Hannibai
+GROUP=com.kevin
+POM_ARTIFACT_ID=hannibai
+VERSION_CODE=3
+VERSION_NAME=0.1.5
+POM_PACKAGING=aar
+
+PROJECT_URL=https://github.com/xuehuayous/Hannibal
+GIT_URL=https://github.com/xuehuayous/Hannibal.git
+WEB_URL=http://zwenkai.com
