--- a/hannibai-aar/build.gradle
+++ b/hannibai-aar/build.gradle
@@ -26,5 +26,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile project(':hannibai-annotation')
+//    compile project(':hannibai-annotation')
+    compile "com.kevin:hannibai-annotation:${VERSION_NAME}"
 }
