Update hannibai library version to 0.1.5

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,4 +25,4 @@ POM_PACKAGING=aar
 
 PROJECT_URL=https://github.com/xuehuayous/Hannibal
 GIT_URL=https://github.com/xuehuayous/Hannibal.git
-WEB_URL=http://zwenkai.com
+WEB_URL=http://www.zwenkai.com
