--- a/hannibai-compiler/build.gradle
+++ b/hannibai-compiler/build.gradle
@@ -11,3 +11,14 @@ dependencies {
     // create META-INFO
     compile 'com.google.auto.service:auto-service:1.0-rc3'
 }
+
+setProperty "POM_ARTIFACT_ID", "hannibai-compiler"
+setProperty "PROJECT_NAME", "Hannibai-compiler"
+setProperty "POM_PACKAGING", "jar"
+//setProperty "VERSION_CODE", "1"
+//setProperty "VERSION_NAME", "0.1.0"
+
+ext {
+    kevinSourceDocFiles = [rootProject.file('gradle/java-sources-docs.gradle')]
+}
+//apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
