Add gson converter

--- a/hannibai-converters/hannibai-converter-gson/build.gradle
+++ b/hannibai-converters/hannibai-converter-gson/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "26.0.0"
 
     defaultConfig {
-        applicationId "com.kevin.hannibai.sample"
         minSdkVersion 9
         targetSdkVersion 25
         versionCode 1
@@ -23,16 +22,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    annotationProcessor project(':hannibai-compiler')
-    //    compile project(':hannibai')
-    compile 'com.kevin:hannibai:0.1.5'
-    compile 'com.google.code.gson:gson:2.2.4'
-    compile project(':hannibai-converters:hannibai-converter-gson')
+    
+    provided 'com.google.code.gson:gson:2.2.4'
+    provided "com.kevin:hannibai:${VERSION_NAME}"
 }
