Add pom description

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,11 +17,13 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 PROJECT_NAME=Hannibai
-GROUP=com.kevin
+GROUP=com.kevin.hannibai
 POM_ARTIFACT_ID=hannibai
 VERSION_CODE=3
 VERSION_NAME=0.1.5
 POM_PACKAGING=aar
+
+POM_DESCRIPTION=A easy way to use android SharePreference.
 
 PROJECT_URL=https://github.com/xuehuayous/Hannibal
 GIT_URL=https://github.com/xuehuayous/Hannibal.git
