--- a/annotation/build.gradle
+++ b/annotation/build.gradle
@@ -4,13 +4,15 @@ sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
 
 
-setProperty "POM_ARTIFACT_ID", "hannibai-annotation"
+setProperty "POM_ARTIFACT_ID", "annotation"
 setProperty "PROJECT_NAME", "Hannibai-annotation"
 setProperty "POM_PACKAGING", "jar"
-//setProperty "VERSION_CODE", "1"
-//setProperty "VERSION_NAME", "0.1.0"
+setProperty "VERSION_CODE", "5"
+setProperty "VERSION_NAME", "0.1.7"
+
+setProperty "POM_DESCRIPTION", "Hannibai annotation"
 
 ext {
     kevinSourceDocFiles = [rootProject.file('gradle/java-sources-docs.gradle')]
 }
-//apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
