--- a/hannibai-annotation/build.gradle
+++ b/hannibai-annotation/build.gradle
@@ -15,4 +15,4 @@ setProperty "POM_DESCRIPTION", "Hannibai annotation"
 ext {
     kevinSourceDocFiles = [rootProject.file('gradle/java-sources-docs.gradle')]
 }
-apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+//apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
