--- a/hannibai-converters/hannibai-converter-gson/build.gradle
+++ b/hannibai-converters/hannibai-converter-gson/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 8
+        versionName "0.2.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -26,10 +26,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-
     provided 'com.google.code.gson:gson:2.2.4'
-    provided project(':hannibai-annotation')
-//    provided "com.kevin:hannibai:${VERSION_NAME}"
+//    provided project(':hannibai-annotation')
+    provided "com.kevin:hannibai-annotation:${VERSION_NAME}"
+//    provided project(':hannibai')
+    provided "com.kevin:hannibai:${VERSION_NAME}"
 }
 
 setProperty "POM_ARTIFACT_ID", "hannibai-converter-gson"
