--- a/hannibai/build.gradle
+++ b/hannibai/build.gradle
@@ -26,8 +26,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    compile project(':hannibai-annotation')
-//    compile "com.kevin:hannibai-annotation:${VERSION_NAME}"
+//    compile project(':hannibai-annotation')
+    compile "com.kevin:hannibai-annotation:${VERSION_NAME}"
 }
 
 // ------
