--- a/hannibai-compiler/build.gradle
+++ b/hannibai-compiler/build.gradle
@@ -13,11 +13,11 @@ dependencies {
     compile 'com.google.auto.service:auto-service:1.0-rc3'
 }
 
-setProperty "POM_ARTIFACT_ID", "compiler"
+setProperty "POM_ARTIFACT_ID", "hannibai-compiler"
 setProperty "PROJECT_NAME", "Hannibai-compiler"
 setProperty "POM_PACKAGING", "jar"
-//setProperty "VERSION_CODE", "5"
-//setProperty "VERSION_NAME", "0.1.7"
+setProperty "VERSION_CODE", "10"
+setProperty "VERSION_NAME", "0.2.2"
 
 ext {
     kevinSourceDocFiles = [rootProject.file('gradle/java-sources-docs.gradle')]
