--- a/hannibai-converters/hannibai-converter-gson/build.gradle
+++ b/hannibai-converters/hannibai-converter-gson/build.gradle
@@ -30,18 +30,19 @@ dependencies {
 //    provided project(':hannibai-annotation')
     provided "com.kevin:hannibai-annotation:${VERSION_NAME}"
 //    provided project(':hannibai')
-    provided "com.kevin:hannibai:${VERSION_NAME}"
+//    provided "com.kevin:hannibai:${VERSION_NAME}"
+    provided 'com.kevin:hannibai:0.2.6'
 }
 
 setProperty "POM_ARTIFACT_ID", "hannibai-converter-gson"
 setProperty "PROJECT_NAME", "Hannibai-converter-gson"
 setProperty "POM_PACKAGING", "jar"
-//setProperty "VERSION_CODE", "1"
-//setProperty "VERSION_NAME", "0.1.0"
+setProperty "VERSION_CODE", "14"
+setProperty "VERSION_NAME", "0.2.6"
 
 setProperty "POM_DESCRIPTION", "Hannibai gson converter"
 
 ext {
     kevinSourceDocFiles = [rootProject.file('gradle/android-sources-docs.gradle')]
 }
-//apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
