--- a/hannibai-converters/hannibai-converter-gson/build.gradle
+++ b/hannibai-converters/hannibai-converter-gson/build.gradle
@@ -45,4 +45,4 @@ setProperty "POM_DESCRIPTION", "Hannibai gson converter"
 ext {
     kevinSourceDocFiles = [rootProject.file('gradle/android-sources-docs.gradle')]
 }
-apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+//apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
