--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':hannibai-compiler', ':hannibai-annotation', ':sample', ':hannibai', ':hannibai-converters:hannibai-converter-gson', ':hannibai-converters:hannibai-converter-logansquare'
+include ':hannibai-compiler', ':hannibai-annotation', ':sample', ':hannibai', ':hannibai-converters:hannibai-converter-gson', ':hannibai-converters:hannibai-converter-logansquare', ':hannibai-converters:hannibai-converter-jackson'
