--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -45,17 +45,17 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-
     compile project(':hannibai')
     annotationProcessor project(':hannibai-compiler')
-
-    // gson
+    // Gson
     compile project(':hannibai-converters:hannibai-converter-gson')
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.kevin:suppertextview:0.1.3'
-
-    // jackson
+    // Jackson
     compile project(':hannibai-converters:hannibai-converter-jackson')
     compile 'com.fasterxml.jackson.core:jackson-core:2.9.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.1'
+    // FastJson
+    compile 'com.alibaba:fastjson:1.2.31'
+    compile project(':hannibai-converters:hannibai-converter-fastjson')
 }
