--- a/hannibai-compiler/build.gradle
+++ b/hannibai-compiler/build.gradle
@@ -17,9 +17,9 @@ setProperty "POM_ARTIFACT_ID", "hannibai-compiler"
 setProperty "PROJECT_NAME", "Hannibai-compiler"
 setProperty "POM_PACKAGING", "jar"
 setProperty "VERSION_CODE", "16"
-setProperty "VERSION_NAME", "0.2.9"
+setProperty "VERSION_NAME", "0.3.0"
 
 ext {
     kevinSourceDocFiles = [rootProject.file('gradle/java-sources-docs.gradle')]
 }
-//apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
