--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -58,4 +58,9 @@ dependencies {
     // FastJson
     compile 'com.alibaba:fastjson:1.2.31'
     compile project(':hannibai-converters:hannibai-converter-fastjson')
+
+//    compile 'io.reactivex.rxjava2:rxjava:2.1.2'
+//    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+//    compile 'io.reactivex:rxjava:1.1.0'
+//    compile 'io.reactivex:rxandroid:1.1.0'
 }
