--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -47,8 +47,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':hannibai')
     annotationProcessor project(':hannibai-compiler')
-//    compile 'com.kevin:hannibai:0.3.0'
-//    annotationProcessor 'com.kevin:hannibai-compiler:0.3.1'
+    //    compile 'com.kevin:hannibai:0.3.0'
+    //    annotationProcessor 'com.kevin:hannibai-compiler:0.3.1'
     // Gson
     compile project(':hannibai-converters:hannibai-converter-gson')
     compile 'com.google.code.gson:gson:2.2.4'
@@ -60,9 +60,13 @@ dependencies {
     // FastJson
     compile 'com.alibaba:fastjson:1.2.31'
     compile project(':hannibai-converters:hannibai-converter-fastjson')
+    // LoganSquare
+    compile 'com.bluelinelabs:logansquare:1.3.7'
+    annotationProcessor 'com.bluelinelabs:logansquare-compiler:1.3.7'
 
-//    compile 'io.reactivex.rxjava2:rxjava:2.1.2'
-//    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-//    compile 'io.reactivex:rxjava:1.1.0'
-//    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.2'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //    compile 'io.reactivex:rxjava:1.1.0'
+    //    compile 'io.reactivex:rxandroid:1.1.0'
+    compile project(':hannibai-converters:hannibai-converter-logansquare')
 }
