--- a/hannibai-converters/hannibai-converter-logansquare/build.gradle
+++ b/hannibai-converters/hannibai-converter-logansquare/build.gradle
@@ -32,3 +32,16 @@ dependencies {
     provided 'com.bluelinelabs:logansquare:1.3.7'
     provided 'com.kevin:hannibai:0.5.1'
 }
+
+setProperty "POM_ARTIFACT_ID", "hannibai-converter-logansquare"
+setProperty "PROJECT_NAME", "Hannibai-converter-logansquare"
+setProperty "POM_PACKAGING", "jar"
+setProperty "VERSION_CODE", "14"
+setProperty "VERSION_NAME", "0.2.6"
+
+setProperty "POM_DESCRIPTION", "Hannibai logansquare converter"
+
+ext {
+    kevinSourceDocFiles = [rootProject.file('gradle/android-sources-docs.gradle')]
+}
+//apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
